bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_u64.rs
use bitbybit::bitfield;

#[bitfield(u64, default = 0)]
struct Test {
    #[bits(63..=64, rw)]
    field: u2,
}

fn main() {}
